drop ssl configuration support
